<resources>
    <string name="app_name">Cookla</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="market">
        <item>全部</item>
        <item>台北市場</item>
        <item>台北二</item>
    </string-array>
    <string name="day_of_week_month">%1$d\n%2$s</string>
    <string name="year_month">%1$s %2$s</string>
    <string name="date_day">%1$d日 - %2$d日</string>
    <string name="btn_week_previous_content">previous week</string>
    <string name="btn_week_next_content">next week</string>
    <string name="dayIngredient">%1$s\n%2$d份</string>
    <string name="stockIngredient">%1$s: %2$d份 有效日期: %3$d天後</string>
    <string name="recipe">食譜</string>
    <string name="storage">庫存</string>
    <string name="menu">菜單</string>
    <string name="buying">待買</string>
    <string name="price">市價</string>
</resources>