<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/recipeFragment"
        android:title="@string/recipe"
        android:icon="@drawable/ic_recipe"/>
    <item
        android:id="@+id/stockFragment"
        android:title="@string/storage"
        android:icon="@drawable/ic_storage"/>
    <item
        android:id="@+id/menuFragment"
        android:title="@string/menu"
        android:icon="@drawable/ic_menu"/>
    <item
        android:id="@+id/buyingFragment"
        android:title="@string/buying"
        android:icon="@drawable/ic_buying_list"/>
    <item
        android:id="@+id/priceFragment"
        android:title="@string/price"
        android:icon="@drawable/ic_price"/>
</menu>